# online-dsl-forge

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: check-online-dsl-forge.yml  codeql.yml  release.yml
devops/sources/: versioning.ts
devops/tests/: versioning.test.ts
docs/: Expression.md  Specification.md
parser/: Cargo.toml  README.md
parser/src/: ast.rs  diagnostics.rs  format.rs  lexer.rs  lib.rs  parser.rs  span.rs
sema/: Cargo.toml  README.md
sema/src/: analyzer.rs  lib.rs  profile.rs  schema.rs  verified.rs
sema/src/analyzer/: support.rs
source/: Cargo.toml  README.md
source/src/: ast.rs  compile.rs  diagnostics.rs  format.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  span.rs  value.rs
source/src/parser/: ast.rs  diagnostics.rs  format.rs  lexer.rs  mod.rs  parse.rs
source/src/rulepack_render/: error.rs  exceptions.rs  files.rs  input.rs  mod.rs  overrides.rs  provenance.rs  types.rs  validation.rs
source/src/runtime/: capability_check.rs  context.rs  defaults.rs  operators.rs  pattern_sets.rs
source/src/sema/: analyzer.rs  dialect.rs  mod.rs  profile.rs  schema.rs  verified.rs
source/src/sema/analyzer/: body_need.rs  functions.rs  phase.rs  support.rs
source/src/sema/schema/: oxirule.rs
tests/: README.md
tests/golden/: compile-diagnostics.json  evaluation.json  formatting.json  parse-diagnostics.json  parsing.json  sema-diagnostics.json  verified-ir.json
tests/golden/body-need/: deferred.json
tests/rust/: cli.rs  golden.rs  parser_api.rs  public_api.rs  rulepack_render.rs  sema_api.rs
tests/scripts/: check-rust-module-size.sh  check-tests-rustfmt.sh
(+1 files in other folders)
