[package]
name = "online-dsl-forge-sema"
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
description = "Semantic analysis, security profiles, and verified IR for online-dsl-forge."
repository = "https://github.com/OxiBelt/online-dsl-forge"
readme = "README.md"
publish = false

[dependencies]
online-dsl-forge-parser = { path = "../parser", version = "0.0.0" }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"

[[test]]
name = "sema_api"
path = "../tests/rust/sema_api.rs"
