[package]
name = "online-dsl-forge"
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
description = "A bounded parser and runtime for in-memory DSL expressions."
repository = "https://github.com/OxiBelt/online-dsl-forge"
readme = "README.md"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[[bin]]
name = "online-dsl-forgectl"
path = "src/bin/online-dsl-forgectl.rs"

[[test]]
name = "public_api"
path = "../tests/rust/public_api.rs"

[[test]]
name = "cli"
path = "../tests/rust/cli.rs"
